=head1 NAME

Changes - List of significant changes to Devel::NYTProf

(As of $Date: 2010-09-12 12:12:04 +0100 (Sun, 12 Sep 2010) $ $Revision: 1342 $)

=cut

=head2 Changes in Devel::NYTProf 4.05 (svn 1340) 12th Sept 2010

  Fixed handling of negative values for subroutine line ranges
    (that may be added to %DB::sub by buggy software). 
  Protect against bad line numbers hanging report generation.

=head2 Changes in Devel::NYTProf 4.04 (svn 1332) 9th July 2010

  Profile now reports presence of the slow regex match vars ($& $' $`).
  The (cumulative inclusive) recursion time measured for subs that are involved
    in recursion is now reported as 'recursion: ... sum of overlapping time'.
  Trace log messages are now flushed immediately.
  Reduced risk of crashes in embedded applications that don't handle PL_endav
    carefully, like current versions of mod_perl.

=head2 Changes in Devel::NYTProf 4.03 (svn 1316) 19th June 2010

  Fixed another nytprofhtml performance problem for profiles with
    many files/evals. Much faster merging of evals now.

  For subs that recurse, show max depth and time in subroutine table.

=head2 Changes in Devel::NYTProf 4.02 (svn 1309) 17th June 2010

  Fixed nytprofhtml performance problem for profiles with
    many files/evals.

  Added progress reporting to nytprofhtml.

=head2 Changes in Devel::NYTProf 4.01 (svn 1296) 10th June 2010

  Fixed links from block/sub level report pages to string eval report
    pages.  RT#58284

  Restored ordering of line - block - sub links on index page.

  Clarified that saving the source code of string evals requires perl
    version 5.8.9+, 5.10.1+, 5.12 or later. RT#58283

=head2 Changes in Devel::NYTProf 4.00 (svn 1291) 8th June 2010

Major changes:

  Added profile reporting of code executed in string evals.
    Each string eval executed gets it's own report page.
    You can 'see' the code that was executed, with profile info.
    String evals may be collapsed/merged in some cases.
