@@ -13,7 +13,7 @@
  * Steve Peters, steve at fisharerojo.org
  *
  * ************************************************************************
- * $Id: NYTProf.xs 1342 2010-09-12 11:12:04Z tim.bunce@gmail.com $
+ * $Id: NYTProf.xs 1345 2010-09-12 12:01:13Z tim.bunce@gmail.com $
  * ************************************************************************
  */
 #ifndef WIN32
