@@ -1,2 +1,2 @@
-eval "1; 
-1;";
+eval "shift; 
+shift;";
