@@ -1,5 +1,5 @@
 # Profile data generated by Devel::NYTProf::Reader
 # More information at http://search.cpan.org/dist/Devel-NYTProf/
 # Format: time,calls,time/call,code
-0,1,0,eval "1; 
-0,0,0,1;";
+0,1,0,eval "shift; 
+0,0,0,shift;";
