@@ -1,10 +1,10 @@
 # Profile data generated by Devel::NYTProf::Reader
 # More information at http://search.cpan.org/dist/Devel-NYTProf/
 # Format: time,calls,time/call,code
-0,1,0,1;
+0,1,0,shift;
 0,1,0,DB::disable_profile();
-0,0,0,1;
+0,0,0,shift;
 0,1,0,DB::enable_profile();
-0,1,0,1;
+0,1,0,shift;
 0,0,0,DB::disable_profile();
-0,0,0,1; # finish with profile disabled
+0,0,0,shift; # finish with profile disabled
