@@ -15,7 +15,7 @@ attribute	total_sub_calls	0
 attribute	xs_version	0
 fid_block_time	1	4	[ 0 3 ]
 fid_block_time	1	6	[ 0 1 ]
-fid_block_time	1	8	[ 0 2 ]
+fid_block_time	1	8	[ 0 3 ]
 fid_block_time	2	1	[ 0 1 ]
 fid_block_time	2	2	[ 0 1 ]
 fid_fileinfo	1	[ test61-submerge.p   1 2 0 0 ]
@@ -31,12 +31,12 @@ fid_fileinfo	2	sub	main::__ANON__[(eval 1)[test61-submerge.p:8]:1]	1-1
 fid_fileinfo	2	call	1	main::foo	[ 3 0 0 0 0 0 0 main::__ANON__[(eval 2)[test61-submerge.p:8]:1]|main::__ANON__[(eval 1)[test61-submerge.p:8]:1]|main::__ANON__[(eval 3)[test61-submerge.p:8]:1] ]
 fid_line_time	1	4	[ 0 3 ]
 fid_line_time	1	6	[ 0 1 ]
-fid_line_time	1	8	[ 0 2 ]
+fid_line_time	1	8	[ 0 3 ]
 fid_line_time	2	1	[ 0 3 ]
 fid_line_time	2	2	[ 0 3 ]
 fid_sub_time	1	4	[ 0 3 ]
 fid_sub_time	1	6	[ 0 1 ]
-fid_sub_time	1	8	[ 0 2 ]
+fid_sub_time	1	8	[ 0 3 ]
 fid_sub_time	2	1	[ 0 1 ]
 fid_sub_time	2	2	[ 0 1 ]
 profile_modes	fid_block_time	block
