@@ -2,12 +2,13 @@
 
 Changes - List of significant changes to Devel::NYTProf
 
-(As of $Date: 2010-09-12 12:12:04 +0100 (Sun, 12 Sep 2010) $ $Revision: 1342 $)
+(As of $Date: 2010-09-13 22:11:28 +0100 (Mon, 13 Sep 2010) $ $Revision: 1352 $)
 
 =cut
 
-=head2 Changes in Devel::NYTProf 4.05 (svn 1340) 12th Sept 2010
+=head2 Changes in Devel::NYTProf 4.05 (svn 1352) 13th Sept 2010
 
+  Fixed tests to work with a new optimization in perl 5.13.4.
   Fixed handling of negative values for subroutine line ranges
     (that may be added to %DB::sub by buggy software). 
   Protect against bad line numbers hanging report generation.
